# WasmEdge

./: .CurrentChangelog.md  Changelog.md
include/api/: wasmedge.h.in
include/ast/: section.h  segment.h
include/common/: astdef.h  configure.h  errcode.h  types.h
include/host/host_function_example/: examplebase.h  exampleenv.h  examplefunc.h  examplemodule.h
include/host/yu_host_function_example/: examplebase.h  exampleenv.h  examplefunc.h  examplemodule.h
include/interpreter/: interpreter.h
include/interpreter/engine/: binary_numeric.ipp
include/runtime/instance/: memory.h
lib/aot/: CMakeLists.txt  compiler.cpp
lib/api/: CMakeLists.txt
lib/ast/: description.cpp  instruction.cpp  module.cpp  section.cpp  segment.cpp
lib/host/: CMakeLists.txt
lib/host/host_function_example/: CMakeLists.txt  examplefunc.cpp  examplemodule.cpp
lib/host/wasi/: environ.cpp
lib/host/wasmedge_process/: processfunc.cpp
lib/host/yu_host_function_example/: CMakeLists.txt  examplefunc.cpp  examplemodule.cpp
lib/interpreter/engine/: control.cpp  engine.cpp
lib/loader/: ldmgr.cpp  loader.cpp  shared_library.cpp
lib/system/: allocator.cpp
lib/validator/: formchecker.cpp
lib/vm/: CMakeLists.txt
test/aot/: AOTcoreTest.cpp
test/host/wasi/: CMakeLists.txt
test/spec/: spectest.cpp
tools/wasmedge/: wasmedgec.cpp  wasmedger-static.cpp  wasmedger.cpp
utils/wasi-test/: run-wasi-test.sh
